--- a/producer/src/main/resources/application.yaml
+++ b/producer/src/main/resources/application.yaml
@@ -26,6 +26,13 @@ spring:
     properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL92Dialect
     show-sql: true
     
+  rabbitmq.host: localhost
+  rabbitmq.port: 5672
+  rabbitmq.username: guest
+  rabbitmq.password: guest
+  rabbitmq.queue: birthday-queue
+  rabbitmq.exchange: birthday-exchange
+    
 server:
     port: 8081    
     
