--- a/consumer/src/main/resources/application.yaml
+++ b/consumer/src/main/resources/application.yaml
@@ -1,14 +1,30 @@
 spring:
   profiles:
-    active: local
+    active: ${ACTIVE_PROFILE}
 ---
 
 spring:
   profile: production
-  datasource:
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/${DB_USERNAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+  
+  rabbitmq.host: ${RABBITMQ_HOST}
+  rabbitmq.port: ${RABBITMQ_PORT}
+  rabbitmq.username: ${RABBITMQ_USERNAME}
+  rabbitmq.password: ${RABBITMQ_PASSWORD}
+  rabbitmq.queue: ${RABBITMQ_QUEUE}
+  rabbitmq.exchange: ${RABBITMQ_EXCHANGE}
+  
+  mail:
+    host: smtp.gmail.com
+    port: ${MAIL_PORT}
+    username: ${EMAIL}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
  
 server:
   port: 8082
@@ -16,16 +32,7 @@ server:
 ---
 spring:
   profile: local
-  datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
-    
-  jpa:
-    hibernate.ddl-auto: update
-    properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL92Dialect
-    show-sql: true
-   
+  
   rabbitmq.host: localhost
   rabbitmq.port: 5672
   rabbitmq.username: guest
@@ -36,7 +43,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${Email}
+    username: ${EMAIL}
     password: ${EMAIL_PASSWORD}
     properties:
       mail:
