--- a/producer/src/main/resources/application.yaml
+++ b/producer/src/main/resources/application.yaml
@@ -1,14 +1,25 @@
 spring:
   profiles:
-    active: local
+    active: ${ACTIVE_PROFILE}
 ---
 
 spring:
   profile: production
   datasource:
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/${DB_USERNAME}
+    url: jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_USERNAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+    
+  jpa:
+    hibernate.ddl-auto: update
+    properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL92Dialect
+    
+  rabbitmq.host: ${RABBITMQ_HOST}
+  rabbitmq.port: ${RABBITMQ_PORT}
+  rabbitmq.username: ${RABBITMQ_USERNAME}
+  rabbitmq.password: ${RABBITMQ_PASSWORD}
+  rabbitmq.queue: ${RABBITMQ_QUEUE}
+  rabbitmq.exchange: ${RABBITMQ_EXCHANGE}
  
 server:
   port: 8080
@@ -34,5 +45,5 @@ spring:
   rabbitmq.exchange: birthday-exchange
     
 server:
-    port: 8081    
+    port: 8080   
     
