producer deployment test

--- a/producer/src/main/resources/application.yaml
+++ b/producer/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
 ---
 
 spring:
-  profile: production
+  profiles: production
   datasource:
     url: jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_USERNAME}
     username: ${DB_USERNAME}
@@ -30,7 +30,7 @@ server:
 
 ---
 spring:
-  profile: local
+  profiles: local
   datasource:
     url: jdbc:postgresql://localhost:5432/utkarshdb
     username: postgres
