--- a/producer/src/main/resources/application.yaml
+++ b/producer/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
 spring:
   profiles: production
   datasource:
-    url: jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_USERNAME}
+    url: jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     
