--- a/producer/src/test/resources/application.yaml
+++ b/producer/src/test/resources/application.yaml
@@ -6,13 +6,16 @@ spring:
 spring:
   profiles: test
   datasource:
-    url: jdbc:postgresql://test:1234/test
-    username: test
-    password: test
+    url: jdbc:h2://mem:db;DB_CLOSE_DELAY=-1
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
     
   jpa:
-    hibernate.ddl-auto: update
+    show-sql: true
+    hibernate.ddl-auto: create-drop
     properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL92Dialect
+    properties.hibernate.format_sql: true
     
   rabbitmq.host: test
   rabbitmq.port: 123
